[tool.poetry]
name = "ashigoku"
version = "0.1.0"
description = ""
authors = ["hdk5 <hdk5@hdk5.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.12.1"
typer = "^0.2.1"
aiofiles = "^0.5.0"
aiostream = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.8.0-alpha.2", allow-prereleases = true}
isort = "^4.3.21"
black = "^19.10b0"

[tool.poetry.scripts]
ashigoku = "ashigoku:app"

[tool.isort]
skip = [
    ".git",
    ".venv",
]
skip_glob = [
]
atomic=true
force_single_line=true
include_trailing_comma=true
use_parentheses=true
reverse_relative=true
line_length=88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
