[tool.poetry]
name = "ashigoku"
version = "0.1.0"
description = ""
authors = ["hdk5 <hdk5@hdk5.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
typer = "^0.4.0"
aiofiles = "^0.8.0"
aiostream = "^0.4.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"

[tool.poetry.scripts]
ashigoku = "ashigoku:app"

[tool.isort]
skip = [
    ".git",
    ".venv",
]
skip_glob = [
]
atomic=true
force_single_line=true
include_trailing_comma=true
use_parentheses=true
reverse_relative=true
line_length=88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
